- Fixed a problem where adding two extra fuel charges for the same fuel would give two duplicate charges instead.
- Fixed a problem with transferring money between a dwelling and a global account where it would multiply the amount byt the scenario quantum instead of the weight of the particular dwelling. This affects =ref.report.global-transactions= and =ref.account.balacnce=
**** Improvements
***** General
- More information given when the standalone (nhm ide) fails to retrieve reports from remote server for a simulation job
***** Documenation
- Improved documenation for using consume function =ref.consume= Added a note about needing to take into account house.weight if using this.
- Document on room heater unsuitability =ref.measure.room-heater=
- Update suitability text for hot water tank thermostat measure =ref.measure.hot-water-tank-thermostat=
- Updated un-suitability text for =ref.measure.warm-air-system=
*** Verison 7.0.3
**** Bugs Fixed
***** Reverted macro validation fixes added as they cause errors which affect previous BEIS scenarios
*** Version 7.0.2
**** Bugs Fixed
***** House Permeability Calculation
Calculate house envelope using all surfaces not just external - Asked for by BEIS/Hideem team
*** Version 7.0.1
**** Bugs Fixed
***** Combinations.choice - now expands combinations to actual measure classes rather than nulls - caused by a bad code merge
***** Suggestions and help for macros
The desktop application now includes suggestions and help for macro arguments which are not optional.
These arguments were previously being left out, by mistake.
*** Version 7.0.0
**** New Features
***** Combinations Choice
To help with performance issues being created by using the ~combinations macro within templates combinations choice has been added to avoid the need to macro expand the scenario before validation. This expansion now happens when executing the simulaiton see =ref.combination.choice=.

***** Products Modelling