@@ -28,6 +28,8 @@ If you want to cross-reference to a language element, you need to use the unique
 - Fit now storage tank thermostat measure checks for presence of water tank before installing =ref.measure.hot-water-tank-thermostat=
 - Fixed a problem where adding two extra fuel charges for the same fuel would give two duplicate charges instead.
 - Fixed a problem with transferring money between a dwelling and a global account where it would multiply the amount byt the scenario quantum instead of the weight of the particular dwelling. This affects =ref.report.global-transactions= and =ref.account.balacnce=
+- Basement floors are now treated as if they are ground floors for heat loss, see SAP 2012 S3.10
+- Calculation for upper floor u-values now includes insulation, the bug should not have affected most upper floors as a majority did not have any exposed floor area through which heat loss could occur.
 **** Improvements
 ***** General
 - More information given when the standalone (nhm ide) fails to retrieve reports from remote server for a simulation job
